force-app/main/default/objects/Litmos__Achievement__c/Litmos__Achievement__c.object-meta.xml
<CustomObject>
    <label>Achievement</label>
    <nameField>
        <displayFormat>A-{00000000}</displayFormat>
        <label>Achievement ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Achievements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>