force-app/main/default/objects/Litmos__Achievement__c/fields/Litmos__AchievementDate__c.field-meta.xml
<CustomField>
    <fullName>Litmos__AchievementDate__c</fullName>
    <label>Achievement Date</label>
    <type>DateTime</type>
</CustomField>