force-app/main/default/objects/Litmos__Achievement__c/fields/Litmos__ProgramID__c.field-meta.xml
<CustomField>
    <fullName>Litmos__ProgramID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program</label>
    <referenceTo>Litmos__Program__c</referenceTo>
    <relationshipLabel>Achievements</relationshipLabel>
    <relationshipName>Achievements</relationshipName>
    <type>Lookup</type>
</CustomField>