force-app/main/default/objects/Litmos__Achievement__c/fields/Litmos__UserID__c.field-meta.xml
<CustomField>
    <fullName>Litmos__UserID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Achievements</relationshipName>
    <type>Lookup</type>
</CustomField>